# DirektDSP_GUI

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  DirektABCompare_8cpp.html  DirektABCompare_8cpp__incl.map  DirektABCompare_8cpp__incl.md5  DirektABCompare_8cpp_source.html  DirektABCompare_8h.html  DirektABCompare_8h.js  DirektABCompare_8h__dep__incl.map  DirektABCompare_8h__dep__incl.md5  DirektABCompare_8h__incl.map  DirektABCompare_8h__incl.md5  DirektABCompare_8h_source.html  DirektAutoLayout.cpp  DirektAutoLayout.h  DirektAutoLayout_8cpp.html  DirektAutoLayout_8cpp__incl.map  DirektAutoLayout_8cpp__incl.md5  DirektAutoLayout_8cpp_source.html  DirektAutoLayout_8h.html  DirektAutoLayout_8h.js  DirektAutoLayout_8h__dep__incl.map  DirektAutoLayout_8h__dep__incl.md5  DirektAutoLayout_8h__incl.map  DirektAutoLayout_8h__incl.md5  DirektAutoLayout_8h_source.html  DirektBaseEditor.cpp  DirektBaseEditor.h  DirektBaseEditor_8cpp.html  DirektBaseEditor_8cpp__incl.map  DirektBaseEditor_8cpp__incl.md5  DirektBaseEditor_8cpp_source.html  DirektBaseEditor_8h.html  DirektBaseEditor_8h.js  DirektBaseEditor_8h__dep__incl.map  DirektBaseEditor_8h__dep__incl.md5  DirektBaseEditor_8h__incl.map  DirektBaseEditor_8h__incl.md5  (+863 more)
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  component_request.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
Service/: PresetManager.h
chrome/: DirektFooter.cpp  DirektFooter.h  DirektHeader.cpp  DirektHeader.h  DirektPopupPanel.cpp  DirektPopupPanel.h  DirektPresetBrowser.cpp  DirektPresetBrowser.h  DirektSessionNotes.cpp  DirektSessionNotes.h
config/: DirektConfig.h  DirektDescriptorHelpers.h  DirektDescriptors.h
controls/: DirektABCompare.cpp  DirektABCompare.h  DirektComboBox.cpp  DirektComboBox.h  DirektKnob.cpp  DirektKnob.h  DirektMacroControl.cpp  DirektMacroControl.h  DirektToggle.cpp  DirektToggle.h
core/: DirektAutoLayout.cpp  DirektAutoLayout.h  DirektBaseEditor.cpp  DirektBaseEditor.h  DirektBuildContext.h  DirektComponentRegistry.cpp  DirektComponentRegistry.h  DirektMidiLearn.cpp  DirektMidiLearn.h  DirektParameterHistory.cpp  DirektParameterHistory.h
display/: DirektClipIndicator.cpp  DirektClipIndicator.h  DirektLabel.cpp  DirektLabel.h  DirektMeter.cpp  DirektMeter.h  DirektStereoMeter.cpp  DirektStereoMeter.h
examples/StandaloneTest/: CMakeLists.txt  Main.cpp  StandaloneTestProcessor.cpp  StandaloneTestProcessor.h
layout/: DirektFlexContainer.cpp  DirektFlexContainer.h  DirektModuleBypassSoloStrip.cpp  DirektModuleBypassSoloStrip.h  DirektSection.cpp  DirektSection.h  DirektTabPanel.cpp  DirektTabPanel.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  classes_f.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  (+55 more)
theme/: DirektColours.h  DirektLookAndFeel.cpp  DirektLookAndFeel.h  DirektTheme.cpp  DirektTheme.h
